feature[ignored-typeKeys]: add possibility ignore typeKeys for timeline event